[package]
name = "alloy-mev-blocker-client"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
alloy-consensus = "1.0.5"
alloy-primitives = { version = "1.3.0", features = ["serde"] }
alloy-provider = { version = "1.0.5", features = ["ws"] }
alloy-pubsub = "1.0.5"
alloy-rpc-types-eth = "1.0.5"
alloy-transport = "1.0.5"
alloy-transport-ws = "1.0.5"
async-trait = "0.1.86"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138" }
tracing = "0.1.41"

[dev-dependencies]
futures-util = "0.3.31"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
