[package]
name = "alloy-mev-blocker-client"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[dependencies]
alloy-consensus = "1.6.3"
alloy-eips = "1.6.3"
alloy-primitives = { version = "1.5.4", features = ["serde"] }
alloy-provider = { version = "1.6.3", features = ["ws"] }
alloy-pubsub = "1.6.3"
alloy-rpc-types-eth = "1.6.3"
alloy-serde = "1.6.3"
alloy-transport = "1.6.3"
alloy-transport-ws = "1.6.3"
async-trait = "0.1.86"
serde = { version = "1.0.217", features = ["derive"] }

[dev-dependencies]
futures-util = "0.3.31"
tracing = "0.1.41"
rustls = "0.23"
serde_json = "1.0.138"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
