[package]
name = "alloy-mev-blocker-client"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[dependencies]
alloy-consensus = "2.0.0"
alloy-eips = "2.0.0"
alloy-primitives = { version = "1.5.7", features = ["serde"] }
alloy-provider = { version = "2.0.0", features = ["ws"] }
alloy-pubsub = "2.0.0"
alloy-rpc-types-eth = "2.0.0"
alloy-serde = "2.0.0"
alloy-transport = "2.0.0"
alloy-transport-ws = "2.0.0"
async-trait = "0.1.86"
serde = { version = "1.0.217", features = ["derive"] }

[dev-dependencies]
futures-util = "0.3.31"
rustls = "0.23"
serde_json = "1.0.138"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
